# Udacity_Tensorflow

./: !!!SetupAWSInstance.txt  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  Untitled Diagram.drawio  cmake_install.cmake  outpupt_pipe.dot  output.avi  output.mov  output.mpg  output.wmv  pipeline-init.dot  pipeline.dot  test.sdp
my_model/: keras_metadata.pb  saved_model.pb
my_model/variables/: variables.data-00000-of-00001  variables.index
src/: Handwirting.h  MessageQueue.cpp  MessageQueue.h  RTSPServer.cpp  RTSPServer.h  ReadClassesToLabels.cpp  ReadClassesToLabels.h  ResultHandling.cpp  ResultHandling.h  Statistics.h  TensorLiteProcessor.cpp  TensorLiteProcessor.h  TensorProcessor.cpp  TensorProcessor.h  VideoReader.cpp  VideoReader.h  VideoServer.cpp  VideoServer.h  main.cpp
